--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -23,14 +23,12 @@
 
 
 
-.nav-itemss > a {
+.navigation>.nav-itemss > a {
     
     font-family: 'Inter',sans-serif;
     font-size: 1em; /* Adjust the size as needed */
     font-weight: bold; /* Makes the text bold */
-    background: linear-gradient(to right, #8B0000, #FF4500, #FF8C00); /* Adjust colors as needed */
-    -webkit-background-clip: text; /* Clips the background to the text */
-    -webkit-text-fill-color: transparent; /* Makes the text transparent to show the gradient */
+    color: #D55409;
     text-transform: uppercase; /* Ensures the text is in uppercase */
     text-decoration: none; /* Removes underline */
     padding: 5px 15px; /* Adds padding for better spacing */
@@ -38,6 +36,31 @@
     border-radius: 5px; /* Adds rounded corners */
 }
 
+.navigation>.nav-itemss.actives > a {
+    
+    font-family: 'Inter',sans-serif;
+    font-size: 1em; /* Adjust the size as needed */
+    font-weight: bold; /* Makes the text bold */
+    color: white;
+    background-color: #D55409;
+    padding: 10px 20px;
+    border-radius: 10px;
+    text-transform: uppercase; /* Ensures the text is in uppercase */
+    text-decoration: none; /* Removes underline */
+    padding: 5px 15px; /* Adds padding for better spacing */
+    transition: background 0.3s, color 0.3s; /* Smooth transition */
+    border-radius: 5px; /* Adds rounded corners */
+}
+
+.gal{
+    color: white;
+}
+.galactive{
+    color: #D55409;
+    background-color: white;
+    padding: 15px 10px;
+    border-radius: 10px;
+}
 
 .panelText{
     font-family: 'Inter',sans-serif;
