--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -20,10 +20,10 @@ body {
     display: flex;
     flex-direction: column;
 }
-header {
+.adminHeader {
     min-height: 40px;
 }
-header,
+#guestheader,.adminHeader,
 footer {
     display: flex; /* Center content inside header and footer */
     justify-content: center;
@@ -37,7 +37,8 @@ main {
 }
 footer {
     margin: auto;
-
+    position: absolute;
+    bottom: 0;
     /* min-height: 40px; */
 }
 
